--- a/verify.html
+++ b/verify.html
@@ -66,10 +66,11 @@
                 </h1>
             </div>
             <div class="d-flex align-items-center gap-2">
-                <a href="/admin.html" class="btn btn-outline-primary btn-sm d-none d-sm-inline-flex">
+                <!-- On small screens show profile icon on right, on desktop hide - admin navigation is available in header -->
+                <a href="/admin.html" class="btn btn-outline-primary btn-sm d-none d-md-inline-flex">
                     <i class="bi bi-shield-lock-fill me-1"></i>Admin Dashboard
                 </a>
-                <a href="/admin.html" class="btn btn-outline-primary btn-sm d-inline-flex d-sm-none" aria-label="Admin Dashboard">
+                <a href="/admin.html" class="btn btn-outline-primary btn-sm d-inline-flex d-md-none" aria-label="Admin Dashboard">
                     <i class="bi bi-shield-lock-fill"></i>
                 </a>
             </div>
