feat: Add shared network utilities for enhanced error handling and caching

--- a/admin.html
+++ b/admin.html
@@ -275,6 +275,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/network.js" defer></script>
     <!-- Mobile slide-out nav -->
     <div id="mobile-nav-backdrop" class="mobile-nav-backdrop d-none" tabindex="-1"></div>
     <nav id="mobile-nav" class="mobile-nav" aria-hidden="true" aria-label="Mobile navigation">
