--- a/verify.html
+++ b/verify.html
@@ -204,6 +204,7 @@
         integrity="sha512-HvOjJrdwNpDbkGJIG2ZNqDlVqMo77qbs4Me4cah0HoDrfhrbA+8SBlZn1KrvAQw7cILLPFJvdwIgphzQmMm+Pw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+    <script src="assets/js/network.js" defer></script>
     <script src="assets/js/verify.js"></script>
 </body>
 
