--- a/admin.html
+++ b/admin.html
@@ -274,7 +274,7 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js" defer></script>
     <script src="assets/js/network.js" defer></script>
     <!-- Mobile slide-out nav -->
     <div id="mobile-nav-backdrop" class="mobile-nav-backdrop d-none" tabindex="-1"></div>
@@ -405,7 +405,7 @@
         </div>
     </div>
 
-    <script src="assets/js/admin.js"></script>
+    <script src="assets/js/admin.js" defer></script>
 </body>
 
 </html>
