--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                         <!-- Centered Status Container (used for maintenance/closed messaging) -->
                         <div id="status-center" class="d-none w-100" aria-live="polite">
                             <div class="d-flex flex-column align-items-center justify-content-center text-center py-5">
-                                <div class="status-hero card border-0 shadow-lg rounded-4 p-4" style="max-width:720px; width:100%" role="region" aria-labelledby="status-center-title" aria-live="polite">
+                                <div class="status-hero card border-0 shadow-lg rounded-4 p-4"
+                                    style="max-width:720px; width:100%" role="region"
+                                    aria-labelledby="status-center-title" aria-live="polite">
                                     <div class="d-flex align-items-start gap-3 status-hero-inner">
                                         <div class="mh-icon-wrapper">
                                             <div class="mh-icon status-icon" aria-hidden="true">&#9888;</div>
@@ -69,16 +71,22 @@
                                             <h2 id="status-center-title" class="h3 fw-extrabold mb-2">Status</h2>
                                             <p id="status-center-text" class="mb-3 text-muted fs-6"></p>
                                             <div class="d-flex flex-wrap gap-2 align-items-center">
-                                                <button id="status-reload-btn" class="btn btn-primary btn-lg rounded-pill" aria-label="Reload status">Reload</button>
-                                                <button id="admin-open-btn" class="btn btn-outline-secondary btn-lg rounded-pill" aria-label="Open admin login">Admin</button>
-                                                <span id="status-countdown" class="text-muted small ms-2" aria-live="polite"></span>
+                                                <button id="status-reload-btn"
+                                                    class="btn btn-primary btn-lg rounded-pill"
+                                                    aria-label="Reload status">Reload</button>
+                                                <button id="admin-open-btn"
+                                                    class="btn btn-outline-secondary btn-lg rounded-pill"
+                                                    aria-label="Open admin login">Admin</button>
+                                                <span id="status-countdown" class="text-muted small ms-2"
+                                                    aria-live="polite"></span>
                                             </div>
                                         </div>
 
                                         <!-- Decorative SVG / Illustration (aria-hidden) -->
                                         <div class="status-illustration d-none d-md-flex" aria-hidden="true">
                                             <!-- Simple abstract shapes to the right for visual polish -->
-                                            <svg width="140" height="110" viewBox="0 0 140 110" fill="none" xmlns="http://www.w3.org/2000/svg" role="img">
+                                            <svg width="140" height="110" viewBox="0 0 140 110" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg" role="img">
                                                 <rect x="0" y="10" width="80" height="90" rx="40" fill="#e8f1ff" />
                                                 <rect x="60" y="0" width="80" height="90" rx="40" fill="#dbeefd" />
                                                 <circle cx="40" cy="40" r="10" fill="#ff7a00" />
@@ -93,7 +101,8 @@
                             <div id="registration-form-container">
                                 <form id="registration-form" class="needs-validation" novalidate>
                                     <div class="mb-4 text-center">
-                                        <label for="profile-pic" class="form-label avatar-picker" id="avatar-picker-label">
+                                        <label for="profile-pic" class="form-label avatar-picker"
+                                            id="avatar-picker-label">
                                             <img id="avatar-preview"
                                                 src="https://placehold.co/150x150/6c757d/white?text=No+Photo"
                                                 class="img-fluid" alt="Profile Picture Preview" />
@@ -120,8 +129,8 @@
                                             <div class="form-floating">
                                                 <i class="fas fa-phone input-icon"></i>
                                                 <input type="tel" class="form-control" id="phone" name="phone"
-                                                    placeholder="Phone Number" required pattern="[0-9]{10}" maxlength="10"
-                                                    inputmode="numeric" />
+                                                    placeholder="Phone Number" required pattern="[0-9]{10}"
+                                                    maxlength="10" inputmode="numeric" />
                                                 <label for="phone">Phone Number</label>
                                                 <div class="invalid-feedback">
                                                     Please enter a valid 10-digit phone number.
@@ -168,8 +177,8 @@
                                     <button type="submit" id="submit-btn"
                                         class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center mt-3 rounded-pill">
                                         <span id="submit-btn-text">Register</span>
-                                        <div class="spinner-border spinner-border-sm text-light ms-2 d-none" role="status"
-                                            id="spinner">
+                                        <div class="spinner-border spinner-border-sm text-light ms-2 d-none"
+                                            role="status" id="spinner">
                                             <span class="visually-hidden">Loading...</span>
                                         </div>
                                     </button>
@@ -290,10 +299,12 @@
                 </div>
                 <form id="admin-login-form">
                     <div class="modal-body">
-                        <p class="small text-muted">Enter your staff password to unlock admin features. The password is stored only in this browser session.</p>
+                        <p class="small text-muted">Enter your staff password to unlock admin features. The password is
+                            stored only in this browser session.</p>
                         <div class="mb-3">
                             <label for="admin-password" class="form-label visually-hidden">Staff Password</label>
-                            <input type="password" id="admin-password" class="form-control" placeholder="Staff password" required aria-required="true" />
+                            <input type="password" id="admin-password" class="form-control" placeholder="Staff password"
+                                required aria-required="true" />
                             <div id="admin-error" class="invalid-feedback d-none" role="alert"></div>
                         </div>
                     </div>
