--- a/verify.html
+++ b/verify.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Verify & Check-In</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/css/bootstrap.min.css"
         integrity="sha512-2bBQCjcnw658Lho4nlXJcc6WkV/UxpE/sAokbXPxQNGqmNdQrWqtw26Ns9kFF/yG792pKR1Sx8/Y1Lf1XN4GKA=="
@@ -16,31 +16,32 @@
 
     <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js" type="text/javascript"></script>
 
-    <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#0d6efd">
-    <meta name="mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="E-Pass">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="icon" href="assets/favicon/favicon.ico">
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#0d6efd" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="E-Pass" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
+    <link rel="icon" href="assets/favicon/favicon.ico" />
 
-    <link rel="stylesheet" href="assets/css/verify.css">
+    <link rel="stylesheet" href="assets/css/verify.css" />
 </head>
 
 <body data-ui-state="login">
-
     <!-- Staff Login Modal -->
     <div id="staff-login-modal">
         <div class="login-card">
             <h1 class="h3 mb-3 fw-bold text-primary">Staff Access</h1>
-            <p class="text-muted mb-4">Please enter the password to access the check-in system.</p>
+            <p class="text-muted mb-4">
+                Please enter the password to access the check-in system.
+            </p>
             <form id="staff-login-form" novalidate>
                 <div class="form-floating mb-3">
                     <input type="password" class="form-control" id="staff-password-input" placeholder="Password"
-                        required>
+                        required />
                     <label for="staff-password-input">Password</label>
                     <div class="invalid-feedback">A password is required.</div>
                 </div>
@@ -59,7 +60,9 @@
     <header class="app-header p-3">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <div class="d-flex align-items-center gap-3">
-                <button id="menu-toggle" class="btn btn-sm btn-light d-md-none" aria-label="Toggle menu" title="Menu"><i class="bi bi-list"></i></button>
+                <button id="menu-toggle" class="btn btn-sm btn-light d-md-none" aria-label="Toggle menu" title="Menu">
+                    <i class="bi bi-list"></i>
+                </button>
                 <h1 class="h5 mb-0 fw-bold text-primary d-flex align-items-center gap-2">
                     <i class="bi bi-person-check-fill"></i>
                     <span class="d-none d-sm-inline">E-Pass Check-In</span>
@@ -70,7 +73,8 @@
                 <a href="/admin.html" class="btn btn-outline-primary btn-sm d-none d-md-inline-flex">
                     <i class="bi bi-shield-lock-fill me-1"></i>Admin Dashboard
                 </a>
-                <a href="/admin.html" class="btn btn-outline-primary btn-sm d-inline-flex d-md-none" aria-label="Admin Dashboard">
+                <a href="/admin.html" class="btn btn-outline-primary btn-sm d-inline-flex d-md-none"
+                    aria-label="Admin Dashboard">
                     <i class="bi bi-shield-lock-fill"></i>
                 </a>
             </div>
@@ -83,13 +87,25 @@
         <div class="mobile-nav-inner">
             <div class="mobile-nav-header d-flex justify-content-between align-items-center">
                 <div class="fw-bold">Menu</div>
-                <button id="mobile-nav-close" class="btn btn-sm btn-light" aria-label="Close menu"><i class="bi bi-x"></i></button>
+                <button id="mobile-nav-close" class="btn btn-sm btn-light" aria-label="Close menu">
+                    <i class="bi bi-x"></i>
+                </button>
             </div>
             <ul class="list-unstyled mt-3">
-                <li><a href="/admin.html" class="mobile-nav-link">📊 Admin Dashboard</a></li>
-                <li><a href="#" class="mobile-nav-link" data-nav-target="start-scan">📷 Start Scan</a></li>
-                <li><a href="#manual-lookup-form" class="mobile-nav-link">🔎 Manual Lookup</a></li>
-                <li><button id="mobile-logout" class="btn btn-danger w-100 mt-3">Logout</button></li>
+                <li>
+                    <a href="/admin.html" class="mobile-nav-link">📊 Admin Dashboard</a>
+                </li>
+                <li>
+                    <a href="#" class="mobile-nav-link" data-nav-target="start-scan">📷 Start Scan</a>
+                </li>
+                <li>
+                    <a href="#manual-lookup-form" class="mobile-nav-link">🔎 Manual Lookup</a>
+                </li>
+                <li>
+                    <button id="mobile-logout" class="btn btn-danger w-100 mt-3">
+                        Logout
+                    </button>
+                </li>
             </ul>
         </div>
     </nav>
@@ -98,23 +114,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
-
                     <div class="card shadow-sm border-0 rounded-4 main-card">
                         <div class="card-body p-4 p-md-5">
-
                             <section id="scanner-section">
-                                <h2 class="display-6 fw-bold text-center mb-4">Verify Attendee</h2>
+                                <h2 class="display-6 fw-bold text-center mb-4">
+                                    Verify Attendee
+                                </h2>
 
                                 <div id="qr-reader-container">
                                     <div id="qr-reader"></div>
                                 </div>
 
-                                <div id="zoom-controls" class="mt-2" style="display: none;">
+                                <div id="zoom-controls" class="mt-2" style="display: none">
                                     <label for="zoom-slider" class="form-label mb-1 small text-muted">Zoom</label>
                                     <div class="d-flex align-items-center">
                                         <i class="bi bi-zoom-out me-2"></i>
                                         <input type="range" class="form-range" id="zoom-slider" min="1" max="5"
-                                            step="0.1">
+                                            step="0.1" />
                                         <i class="bi bi-zoom-in ms-2"></i>
                                     </div>
                                 </div>
@@ -124,14 +140,16 @@
                                     <span id="start-scan-btn-text">Start Camera Scan</span>
                                 </button>
 
-                                <hr class="my-4">
-                                <h3 class="text-center fs-5 fw-medium mb-3 text-muted">Or, Manual Lookup</h3>
+                                <hr class="my-4" />
+                                <h3 class="text-center fs-5 fw-medium mb-3 text-muted">
+                                    Or, Manual Lookup
+                                </h3>
 
                                 <form id="manual-lookup-form" novalidate>
                                     <div class="mb-3">
                                         <label for="reg-id-input" class="form-label">Registration ID</label>
                                         <input type="text" class="form-control" id="reg-id-input"
-                                            placeholder="e.g., UP25-..." required>
+                                            placeholder="e.g., UP25-..." required />
                                         <div class="invalid-feedback">
                                             Please enter a registration ID.
                                         </div>
@@ -148,7 +166,6 @@
                             </section>
 
                             <section id="results-section" class="text-center">
-
                                 <!-- Centering wrapper for the status badge -->
                                 <div class="status-badge-wrapper">
                                     <div id="result-status-badge"
@@ -162,15 +179,21 @@
                                 </div>
 
                                 <img id="result-avatar" src="https://placehold.co/150x150/6c757d/white?text=No+Photo"
-                                    class="img-fluid my-4 animated" alt="Profile Picture">
+                                    class="img-fluid my-4 animated" alt="Profile Picture" />
 
                                 <h2 id="result-name" class="fw-bold fs-3 mb-3 animated"></h2>
 
                                 <div class="epass-info-block text-start bg-light p-3 rounded-3 animated">
-                                    <p class="mb-2"><strong>Reg. ID:</strong> <span id="result-reg-id"
-                                            class="text-danger fw-bold"></span></p>
-                                    <p class="mb-2"><strong>Phone:</strong> <span id="result-phone"></span></p>
-                                    <p class="mb-0"><strong>Email:</strong> <span id="result-email"></span></p>
+                                    <p class="mb-2">
+                                        <strong>Reg. ID:</strong>
+                                        <span id="result-reg-id" class="text-danger fw-bold"></span>
+                                    </p>
+                                    <p class="mb-2">
+                                        <strong>Phone:</strong> <span id="result-phone"></span>
+                                    </p>
+                                    <p class="mb-0">
+                                        <strong>Email:</strong> <span id="result-email"></span>
+                                    </p>
                                 </div>
 
                                 <button id="checkin-btn"
@@ -188,12 +211,12 @@
                                     <i class="bi bi-arrow-left me-2"></i>Scan Next Attendee
                                 </button>
                             </section>
-
                         </div>
                     </div>
 
                     <footer class="text-center text-muted mt-4">
-                        <small>Made with <span class="heart">&hearts;</span> by EllowDigital</small>
+                        <small>Made with <span class="heart">&hearts;</span> by
+                            EllowDigital</small>
                     </footer>
                 </div>
             </div>
