--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --bg: #f5f6fb;
-            --card: #ffffff;
-            --accent: #2563eb;
-            --accent-dark: #1d4ed8;
-            --text: #0f172a;
-            --muted: #4b5563;
-            --border: #dbe3f5;
-            --radius: 18px;
-            --shadow: 0 24px 60px rgba(15, 23, 42, 0.12);
+            --bg: #f3f5fb;
+            --surface: #ffffff;
+            --border: #e2e8f5;
+            --shadow: 0 24px 48px rgba(15, 23, 42, 0.08);
+            --primary: #2563eb;
+            --primary-dark: #1d4ed8;
+            --accent: #0f172a;
+            --muted: #5b647a;
+            --success: #16a34a;
+            --error: #dc2626;
+            --radius: 20px;
         }
 
         * {
@@ -29,58 +31,89 @@
         body {
             margin: 0;
             font-family: "Inter", sans-serif;
-            background: var(--bg);
-            color: var(--text);
+            background: linear-gradient(160deg, rgba(37, 99, 235, 0.04), transparent 55%), var(--bg);
+            color: var(--accent);
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 48px 16px;
+            padding: 56px 16px;
         }
 
         main {
             width: min(980px, 100%);
-            background: var(--card);
+            background: var(--surface);
             border-radius: calc(var(--radius) + 6px);
-            box-shadow: var(--shadow);
             border: 1px solid rgba(15, 23, 42, 0.05);
-            padding: clamp(32px, 4vw, 48px);
-            display: grid;
-            gap: clamp(32px, 4vw, 52px);
+            box-shadow: var(--shadow);
+            padding: clamp(36px, 5vw, 60px);
+            display: flex;
+            flex-direction: column;
+            gap: clamp(36px, 5vw, 56px);
         }
 
         header {
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
             text-align: center;
+            display: grid;
+            gap: 12px;
         }
 
         header h1 {
             margin: 0;
-            font-size: clamp(2rem, 3.5vw, 2.6rem);
-            letter-spacing: -0.01em;
+            font-size: clamp(2rem, 4vw, 2.8rem);
+            letter-spacing: -0.02em;
         }
 
         header p {
             margin: 0;
+            font-size: 1.05rem;
             color: var(--muted);
-            font-size: clamp(1rem, 2vw, 1.1rem);
         }
 
         .content {
-            display: grid;
-            gap: clamp(28px, 4vw, 42px);
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            display: flex;
+            flex-direction: column;
+            gap: 32px;
         }
 
         .card {
-            background: #ffffff;
+            background: var(--surface);
             border-radius: var(--radius);
             border: 1px solid var(--border);
-            padding: clamp(24px, 3vw, 32px);
+            box-shadow: 0 18px 40px rgba(15, 23, 42, 0.06);
+            padding: clamp(28px, 4vw, 40px);
             display: grid;
-            gap: 24px;
+            gap: 28px;
+        }
+
+        .card-header {
+            display: grid;
+            gap: 10px;
+        }
+
+        .card-header h2 {
+            margin: 0;
+            font-size: 1.65rem;
+        }
+
+        .card-header p {
+            margin: 0;
+            color: var(--muted);
+            font-size: 0.98rem;
+        }
+
+        .card-checklist {
+            margin: 0;
+            padding-left: 18px;
+            color: var(--muted);
+            display: grid;
+            gap: 4px;
+            font-size: 0.95rem;
+        }
+
+        .helper-text {
+            color: var(--muted);
+            font-size: 0.9rem;
         }
 
         .avatar-upload {
@@ -88,25 +121,39 @@
             align-items: center;
             gap: 24px;
             flex-wrap: wrap;
+            padding: 18px;
+            background: #f8faff;
+            border: 1px dashed rgba(37, 99, 235, 0.3);
+            border-radius: 18px;
+        }
+
+        .avatar-figure {
+            display: grid;
+            gap: 8px;
+            justify-items: center;
         }
 
         .avatar-preview {
-            width: 110px;
-            height: 110px;
+            width: 116px;
+            height: 116px;
             border-radius: 50%;
             border: 2px solid rgba(37, 99, 235, 0.45);
-            background: rgba(37, 99, 235, 0.08);
+            background: linear-gradient(135deg, #dbeafe, #93c5fd);
             display: grid;
             place-items: center;
             overflow: hidden;
-            position: relative;
-            transition: border-color 0.2s ease, background 0.2s ease;
+            transition: transform 0.2s ease, border-color 0.2s ease;
         }
 
         .avatar-preview img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+
+        .avatar-preview:hover {
+            transform: translateY(-2px);
+            border-color: rgba(37, 99, 235, 0.65);
         }
 
         .avatar-action {
@@ -119,17 +166,17 @@
         .avatar-action label {
             width: fit-content;
             background: rgba(37, 99, 235, 0.12);
-            color: var(--accent-dark);
+            color: var(--primary-dark);
             padding: 10px 18px;
             border-radius: 999px;
             font-weight: 600;
             cursor: pointer;
-            border: 1px solid rgba(37, 99, 235, 0.18);
+            border: 1px solid rgba(37, 99, 235, 0.2);
             transition: background 0.2s ease, transform 0.15s ease;
         }
 
         .avatar-action label:hover {
-            background: rgba(37, 99, 235, 0.24);
+            background: rgba(37, 99, 235, 0.2);
             transform: translateY(-1px);
         }
 
@@ -139,19 +186,20 @@
 
         form {
             display: grid;
-            gap: 18px;
+            gap: 20px;
         }
 
         .form-row {
             display: grid;
-            gap: 18px;
+            gap: 20px;
             grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
         }
 
         label {
             display: block;
             font-weight: 600;
-            margin-bottom: 8px;
+            margin-bottom: 6px;
+            color: var(--accent);
         }
 
         input,
@@ -161,9 +209,9 @@
             border-radius: 14px;
             border: 1px solid rgba(15, 23, 42, 0.08);
             background: #f8fafc;
-            color: var(--text);
+            color: var(--accent);
             font: inherit;
-            transition: border 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
+            transition: border-color 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
         }
 
         input::placeholder {
@@ -173,38 +221,38 @@
         input:focus,
         select:focus {
             outline: none;
-            border-color: rgba(37, 99, 235, 0.6);
+            border-color: rgba(37, 99, 235, 0.7);
             box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.18);
             background: #fff;
         }
 
         .phone-group {
             display: flex;
-            align-items: stretch;
-            background: #f8fafc;
-            border-radius: 14px;
+            align-items: center;
             border: 1px solid rgba(15, 23, 42, 0.08);
+            border-radius: 14px;
+            background: #f8fafc;
             overflow: hidden;
         }
 
         .phone-prefix {
             padding: 0 16px;
             background: rgba(37, 99, 235, 0.12);
+            font-weight: 600;
+            color: var(--primary-dark);
             display: grid;
             place-items: center;
-            font-weight: 600;
-            color: var(--accent-dark);
             border-right: 1px solid rgba(15, 23, 42, 0.06);
         }
 
         .phone-group input {
-            border: 0;
+            border: none;
             background: transparent;
             padding-left: 16px;
         }
 
         button {
-            background: var(--accent);
+            background: var(--primary);
             color: #fff;
             border: none;
             padding: 16px;
@@ -216,23 +264,16 @@
             box-shadow: 0 15px 30px rgba(37, 99, 235, 0.25);
         }
 
-        button:hover {
-            background: var(--accent-dark);
+        button:hover:not(:disabled) {
+            background: var(--primary-dark);
             transform: translateY(-1px);
             box-shadow: 0 20px 40px rgba(37, 99, 235, 0.3);
         }
 
-        button:active {
-            transform: translateY(0);
-        }
-
-        .search-card {
-            background: #f8fbff;
-            border: 1px dashed rgba(37, 99, 235, 0.25);
-            border-radius: var(--radius);
-            padding: clamp(24px, 3vw, 30px);
-            display: grid;
-            gap: 18px;
+        button:disabled {
+            opacity: 0.65;
+            cursor: not-allowed;
+            box-shadow: none;
         }
 
         .form-feedback {
@@ -242,30 +283,30 @@
         }
 
         .form-feedback.success {
-            color: #16a34a;
+            color: var(--success);
         }
 
         .form-feedback.error {
-            color: #dc2626;
+            color: var(--error);
         }
 
         .epass-preview {
-            margin-top: 18px;
+            margin-top: 12px;
             display: grid;
             gap: 16px;
             place-items: center;
             text-align: center;
-            background: #f8fbff;
             padding: 24px;
             border-radius: var(--radius);
-            border: 1px solid rgba(37, 99, 235, 0.18);
+            border: 1px solid rgba(37, 99, 235, 0.16);
+            background: #f8fbff;
         }
 
         .epass-preview img {
             width: 100%;
             max-width: 380px;
-            border-radius: 22px;
-            box-shadow: 0 20px 45px rgba(15, 23, 42, 0.18);
+            border-radius: 24px;
+            box-shadow: 0 22px 45px rgba(15, 23, 42, 0.18);
         }
 
         .epass-meta {
@@ -280,34 +321,28 @@
             justify-content: center;
             padding: 12px 20px;
             border-radius: 12px;
-            background: var(--accent);
+            background: var(--primary);
             color: #fff;
             font-weight: 600;
             text-decoration: none;
             transition: background 0.2s ease, transform 0.15s ease;
-            border: none;
-            box-shadow: 0 15px 30px rgba(37, 99, 235, 0.22);
+            box-shadow: 0 14px 32px rgba(37, 99, 235, 0.22);
         }
 
         .epass-download:hover {
-            background: var(--accent-dark);
+            background: var(--primary-dark);
             transform: translateY(-1px);
         }
 
-        .search-card h2 {
-            margin: 0;
-            font-size: 1.3rem;
+        .success-title {
+            font-weight: 700;
+            font-size: 1.05rem;
+            color: var(--primary-dark);
         }
 
-        .search-card p {
-            margin: 0;
-            color: var(--muted);
-        }
-
-        .search-form {
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
+        .search-card {
+            background: #f9fbff;
+            border: 1px solid rgba(37, 99, 235, 0.18);
         }
 
         .search-inputs {
@@ -316,10 +351,24 @@
             grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
         }
 
-        .success-title {
-            font-weight: 700;
-            font-size: 1.1rem;
-            color: var(--accent-dark);
+        footer {
+            text-align: center;
+            color: rgba(75, 85, 99, 0.7);
+            font-size: 0.85rem;
+        }
+
+        @media (max-width: 640px) {
+            body {
+                padding: 32px 12px;
+            }
+
+            .card {
+                padding: 24px;
+            }
+
+            .avatar-upload {
+                width: 100%;
+            }
         }
 
         footer {
@@ -338,15 +387,26 @@
         </header>
 
         <div class="content">
-            <section class="card" aria-labelledby="register-title">
+            <section class="card registration-card" aria-labelledby="register-title">
+                <div class="card-header">
+                    <h2 id="register-title">Register for your EMRS e-pass</h2>
+                    <ul class="card-checklist">
+                        <li>Add your photo</li>
+                        <li>Share your contact details</li>
+                        <li>Submit to instantly get your QR pass</li>
+                    </ul>
+                </div>
                 <div class="avatar-upload">
-                    <div class="avatar-preview" id="avatarPreview">
-                        <img id="avatarImage" alt="Profile preview" hidden>
-                        <span id="avatarPlaceholder">Upload</span>
+                    <div class="avatar-figure">
+                        <div class="avatar-preview" id="avatarPreview">
+                            <img id="avatarImage" alt="Profile preview" hidden>
+                            <span id="avatarPlaceholder">Add photo</span>
+                        </div>
+                        <p class="helper-text">Square photos look best.</p>
                     </div>
                     <div class="avatar-action">
-                        <label for="avatarInput">Upload profile image</label>
-                        <span>JPEG or PNG, max 5 MB.</span>
+                        <label for="avatarInput">Add photo</label>
+                        <span>JPEG or PNG, up to 5 MB.</span>
                     </div>
                     <input id="avatarInput" type="file" accept="image/*">
                 </div>
@@ -411,9 +471,11 @@
                 </form>
             </section>
 
-            <section class="search-card">
-                <h2>Find your e-pass</h2>
-                <p>Enter the phone number used during registration (10 digits) or your email address.</p>
+            <section class="card search-card" aria-labelledby="find-title">
+                <div class="card-header">
+                    <h2 id="find-title">Find your e-pass</h2>
+                    <p>Enter the phone number used during registration (10 digits) or your email address.</p>
+                </div>
                 <form class="search-form" id="searchForm">
                     <div class="search-inputs">
                         <input id="searchPhone" name="searchPhone" type="tel" placeholder="Phone number"
@@ -451,19 +513,19 @@
         const epassReg = document.getElementById('epassReg');
         const epassDownload = document.getElementById('epassDownload');
         const stateSelect = document.getElementById('state');
-    const epassMessage = document.getElementById('epassMessage');
-    const searchForm = document.getElementById('searchForm');
-    const searchPhoneInput = document.getElementById('searchPhone');
-    const searchEmailInput = document.getElementById('searchEmail');
-    const searchFeedback = document.getElementById('searchFeedback');
-    const searchPreview = document.getElementById('searchPreview');
-    const searchMessage = document.getElementById('searchMessage');
-    const searchImage = document.getElementById('searchImage');
-    const searchName = document.getElementById('searchName');
-    const searchReg = document.getElementById('searchReg');
-    const searchDownload = document.getElementById('searchDownload');
+        const epassMessage = document.getElementById('epassMessage');
+        const searchForm = document.getElementById('searchForm');
+        const searchPhoneInput = document.getElementById('searchPhone');
+        const searchEmailInput = document.getElementById('searchEmail');
+        const searchFeedback = document.getElementById('searchFeedback');
+        const searchPreview = document.getElementById('searchPreview');
+        const searchMessage = document.getElementById('searchMessage');
+        const searchImage = document.getElementById('searchImage');
+        const searchName = document.getElementById('searchName');
+        const searchReg = document.getElementById('searchReg');
+        const searchDownload = document.getElementById('searchDownload');
 
-    const defaultBorderColor = 'rgba(37, 99, 235, 0.45)';
+        const defaultBorderColor = 'rgba(37, 99, 235, 0.45)';
 
         const resetAvatar = () => {
             avatarImage.src = '';
